fix: Move Contact image to full-width block at bottom of Slide 12
- Contact image now appears as last fragment (full width)
- Practical Playbook and Key Insight are first
- Image has fragment class to appear after other content
- Applied to both English and German versions

--- a/de.html
+++ b/de.html
@@ -490,31 +490,29 @@
             <section>
                 <div class="slide-content">
                     <h2>Meine persönlichen Empfehlungen</h2>
-                    <div style="display: grid; grid-template-columns: 1fr 350px; gap: 2rem;">
-                        <div class="card" style="padding: 2rem;">
-                            <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem;">Praktischer Fahrplan</h3>
-                            <ol style="font-size: 1.3rem; line-height: 2.2;">
-                                <li style="margin-bottom: 1.5rem;">
-                                    <strong>Fokussieren Sie sich auf einen hochwertigen Use Case</strong><br/>
-                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Energiehandel auf DataSpace mit natürlicher Sprache via MCP</span>
-                                </li>
-                                <li style="margin-bottom: 1.5rem;">
-                                    <strong>Liefern Sie einsatzbereite Services</strong><br/>
-                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Vorgefertigte Dashboards, Alerts, Connectoren → keine Rohdaten</span>
-                                </li>
-                                <li>
-                                    <strong>Automatisieren Sie Compliance</strong><br/>
-                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Richtlinien- + Zustimmungsdurchsetzung im Workflow integriert</span>
-                                </li>
-                            </ol>
-                        </div>
-                        <div style="display: flex; align-items: center; justify-content: center;">
-                            <img src="/Contact.Matthias.Buchhorn.png" alt="Kontakt Matthias Buchhorn" loading="lazy" style="width: 100%; height: auto; border-radius: 10px;" />
-                        </div>
+                    <div class="card" style="padding: 2rem; margin-bottom: 1.5rem;">
+                        <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem;">Praktischer Fahrplan</h3>
+                        <ol style="font-size: 1.3rem; line-height: 2.2;">
+                            <li style="margin-bottom: 1.5rem;">
+                                <strong>Fokussieren Sie sich auf einen hochwertigen Use Case</strong><br/>
+                                <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Energiehandel auf DataSpace mit natürlicher Sprache via MCP</span>
+                            </li>
+                            <li style="margin-bottom: 1.5rem;">
+                                <strong>Liefern Sie einsatzbereite Services</strong><br/>
+                                <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Vorgefertigte Dashboards, Alerts, Connectoren → keine Rohdaten</span>
+                            </li>
+                            <li>
+                                <strong>Automatisieren Sie Compliance</strong><br/>
+                                <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Richtlinien- + Zustimmungsdurchsetzung im Workflow integriert</span>
+                            </li>
+                        </ol>
                     </div>
-                    <div class="card card-success fragment" style="margin-top: 2rem; padding: 1.5rem;">
+                    <div class="card card-success fragment" style="padding: 1.5rem; margin-bottom: 1.5rem;">
                         <h3 style="font-size: 1.4rem; margin-bottom: 1rem;">💡 Wichtigste Erkenntnis</h3>
                         <p style="font-size: 1.25rem; line-height: 1.8;"><strong>Kunden kaufen Lösungen, nicht Daten.</strong> Verpacken Sie Erkenntnisse und Integration zusammen—dort lebt der Wert.</p>
+                    </div>
+                    <div style="width: 100%; display: flex; align-items: center; justify-content: center; margin-top: 1.5rem;" class="fragment">
+                        <img src="/Contact.Matthias.Buchhorn.png" alt="Kontakt Matthias Buchhorn" loading="lazy" style="width: 100%; height: auto; border-radius: 10px;" />
                     </div>
                 </div>
             </section>
