--- a/index.html
+++ b/index.html
@@ -490,31 +490,29 @@
             <section>
                 <div class="slide-content">
                     <h2>My Personal Recommendations</h2>
-                    <div style="display: grid; grid-template-columns: 1fr 350px; gap: 2rem;">
-                        <div class="card" style="padding: 2rem;">
-                            <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem;">Practical Playbook</h3>
-                            <ol style="font-size: 1.3rem; line-height: 2.2;">
-                                <li style="margin-bottom: 1.5rem;">
-                                    <strong>Anchor on one high-value use case</strong><br/>
-                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Energy trading on DataSpace with natural language queries via MCP</span>
-                                </li>
-                                <li style="margin-bottom: 1.5rem;">
-                                    <strong>Deliver ready-to-use services</strong><br/>
-                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Pre-built dashboards, alerts, connectors → no raw data dumps</span>
-                                </li>
-                                <li>
-                                    <strong>Automate compliance</strong><br/>
-                                    <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Policy + consent enforcement built into workflow</span>
-                                </li>
-                            </ol>
-                        </div>
-                        <div style="display: flex; align-items: center; justify-content: center;">
-                            <img src="/Contact.Matthias.Buchhorn.png" alt="Contact Matthias Buchhorn" loading="lazy" style="width: 100%; height: auto; border-radius: 10px;" />
-                        </div>
+                    <div class="card" style="padding: 2rem; margin-bottom: 1.5rem;">
+                        <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem;">Practical Playbook</h3>
+                        <ol style="font-size: 1.3rem; line-height: 2.2;">
+                            <li style="margin-bottom: 1.5rem;">
+                                <strong>Anchor on one high-value use case</strong><br/>
+                                <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Energy trading on DataSpace with natural language queries via MCP</span>
+                            </li>
+                            <li style="margin-bottom: 1.5rem;">
+                                <strong>Deliver ready-to-use services</strong><br/>
+                                <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Pre-built dashboards, alerts, connectors → no raw data dumps</span>
+                            </li>
+                            <li>
+                                <strong>Automate compliance</strong><br/>
+                                <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Policy + consent enforcement built into workflow</span>
+                            </li>
+                        </ol>
                     </div>
-                    <div class="card card-success fragment" style="margin-top: 2rem; padding: 1.5rem;">
+                    <div class="card card-success fragment" style="padding: 1.5rem; margin-bottom: 1.5rem;">
                         <h3 style="font-size: 1.4rem; margin-bottom: 1rem;">💡 Key Insight</h3>
                         <p style="font-size: 1.25rem; line-height: 1.8;"><strong>Clients buy outcomes, not data.</strong> Package insight and integration together—that's where value lives.</p>
+                    </div>
+                    <div style="width: 100%; display: flex; align-items: center; justify-content: center; margin-top: 1.5rem;" class="fragment">
+                        <img src="/Contact.Matthias.Buchhorn.png" alt="Contact Matthias Buchhorn" loading="lazy" style="width: 100%; height: auto; border-radius: 10px;" />
                     </div>
                 </div>
             </section>
