Fix slide 12 contact image to be full width
- Removed slide-content padding to allow image to stretch full width
- Simplified image container from calc() with negative margins to simple 100% width
- Applied fix to both English and German versions
- Image now takes up entire slide width at bottom of slide 12

--- a/de.html
+++ b/de.html
@@ -488,31 +488,47 @@
 
             <!-- Folie 12: Persönliche Empfehlungen -->
             <section>
-                <div class="slide-content">
-                    <h2>Meine persönlichen Empfehlungen</h2>
-                    <div class="card" style="padding: 2rem; margin-bottom: 1.5rem;">
-                        <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem;">Praktischer Fahrplan</h3>
-                        <ol style="font-size: 1.3rem; line-height: 2.2;">
-                            <li style="margin-bottom: 1.5rem;">
-                                <strong>Fokussieren Sie sich auf einen hochwertigen Use Case</strong><br/>
-                                <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Energiehandel auf DataSpace mit natürlicher Sprache via MCP</span>
-                            </li>
-                            <li style="margin-bottom: 1.5rem;">
-                                <strong>Liefern Sie einsatzbereite Services</strong><br/>
-                                <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Vorgefertigte Dashboards, Alerts, Connectoren → keine Rohdaten</span>
-                            </li>
-                            <li>
-                                <strong>Automatisieren Sie Compliance</strong><br/>
-                                <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Richtlinien- + Zustimmungsdurchsetzung im Workflow integriert</span>
-                            </li>
-                        </ol>
+                <div class="slide-content" style="display: grid; grid-template-rows: 1fr auto; gap: 0; padding: 0;">
+                    <div style="overflow-y: auto; padding: 1.5rem; display: flex; flex-direction: column;">
+                        <h2 style="margin-top: 0; margin-bottom: 1.5rem;">Meine persönlichen Empfehlungen</h2>
+                        <!-- Top Row: Playbook and Key Insights side-by-side -->
+                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem;">
+                            <div class="card" style="padding: 2rem;">
+                                <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem;">Praktischer Fahrplan</h3>
+                                <ol style="font-size: 1.3rem; line-height: 2.2;">
+                                    <li style="margin-bottom: 1.5rem;">
+                                        <strong>Fokussieren Sie sich auf einen hochwertigen Use Case</strong><br/>
+                                        <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Energiehandel auf DataSpace mit natürlicher Sprache via MCP</span>
+                                    </li>
+                                    <li style="margin-bottom: 1.5rem;">
+                                        <strong>Liefern Sie einsatzbereite Services</strong><br/>
+                                        <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Vorgefertigte Dashboards, Alerts, Connectoren → keine Rohdaten</span>
+                                    </li>
+                                    <li>
+                                        <strong>Automatisieren Sie Compliance</strong><br/>
+                                        <span style="font-size: 1.1rem; color: #a0a0a0;">Beispiel: Richtlinien- + Zustimmungsdurchsetzung im Workflow integriert</span>
+                                    </li>
+                                </ol>
+                            </div>
+                            <div style="display: grid; grid-template-rows: auto auto auto; gap: 1rem;">
+                                <div class="card card-success fragment" style="padding: 1.5rem;">
+                                    <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem;">💡 Daten als Integration</h3>
+                                    <p style="font-size: 1.1rem; line-height: 1.6;">Daten haben nur Wert, wenn sie in nutzbare Services eingebettet sind, nicht als Rohdaten-Exports.</p>
+                                </div>
+                                <div class="card card-success fragment" style="padding: 1.5rem;">
+                                    <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem;">💡 Protokoll-Fit</h3>
+                                    <p style="font-size: 1.1rem; line-height: 1.6;">Wählen Sie das richtige Protokoll für Ihr Geschäftsmodell—DataSpace, MCP oder APIs.</p>
+                                </div>
+                                <div class="card card-success fragment" style="padding: 1.5rem;">
+                                    <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem;">💡 Compliance First</h3>
+                                    <p style="font-size: 1.1rem; line-height: 1.6;">Bauen Sie Datenschutz, Zustimmung und Regulierung in Ihren Kern-Workflow ein.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card card-success fragment" style="padding: 1.5rem; margin-bottom: 1.5rem;">
-                        <h3 style="font-size: 1.4rem; margin-bottom: 1rem;">💡 Wichtigste Erkenntnis</h3>
-                        <p style="font-size: 1.25rem; line-height: 1.8;"><strong>Kunden kaufen Lösungen, nicht Daten.</strong> Verpacken Sie Erkenntnisse und Integration zusammen—dort lebt der Wert.</p>
-                    </div>
-                    <div style="width: 100%; display: flex; align-items: center; justify-content: center; margin-top: 1.5rem;" class="fragment">
-                        <img src="/Contact.Matthias.Buchhorn.png" alt="Kontakt Matthias Buchhorn" loading="lazy" style="width: 100%; height: auto; border-radius: 10px;" />
+                    <!-- Full-width image at bottom -->
+                    <div style="width: 100%; margin: 0; padding: 0; flex-shrink: 0; overflow: hidden;" class="fragment">
+                        <img src="/Contact.Matthias.Buchhorn.png" alt="Kontakt Matthias Buchhorn" loading="lazy" style="width: 100%; height: auto; display: block;" />
                     </div>
                 </div>
             </section>
