--- a/index.html
+++ b/index.html
@@ -485,36 +485,52 @@
                     </div>
                 </div>
             </section>
-
             <!-- Slide 12: Personal Recommendations -->
             <section>
-                <div class="slide-content">
-                    <h2>My Personal Recommendations</h2>
-                    <div class="card" style="padding: 2rem; margin-bottom: 1.5rem;">
-                        <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem;">Practical Playbook</h3>
-                        <ol style="font-size: 1.3rem; line-height: 2.2;">
-                            <li style="margin-bottom: 1.5rem;">
-                                <strong>Anchor on one high-value use case</strong><br/>
-                                <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Energy trading on DataSpace with natural language queries via MCP</span>
-                            </li>
-                            <li style="margin-bottom: 1.5rem;">
-                                <strong>Deliver ready-to-use services</strong><br/>
-                                <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Pre-built dashboards, alerts, connectors → no raw data dumps</span>
-                            </li>
-                            <li>
-                                <strong>Automate compliance</strong><br/>
-                                <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Policy + consent enforcement built into workflow</span>
-                            </li>
-                        </ol>
+                <div class="slide-content" style="display: grid; grid-template-rows: 1fr auto; gap: 0; padding: 0;">
+                    <div style="overflow-y: auto; padding: 1.5rem; display: flex; flex-direction: column;">
+                        <h2 style="margin-top: 0; margin-bottom: 1.5rem;">My Personal Recommendations</h2>
+                        <!-- Top Row: Playbook and Key Insights side-by-side -->
+                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem;">
+                            <div class="card" style="padding: 2rem;">
+                                <h3 style="font-size: 1.6rem; margin-bottom: 1.5rem;">Practical Playbook</h3>
+                                <ol style="font-size: 1.3rem; line-height: 2.2;">
+                                    <li style="margin-bottom: 1.5rem;">
+                                        <strong>Anchor on one high-value use case</strong><br/>
+                                        <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Energy trading on DataSpace with natural language queries via MCP</span>
+                                    </li>
+                                    <li style="margin-bottom: 1.5rem;">
+                                        <strong>Deliver ready-to-use services</strong><br/>
+                                        <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Pre-built dashboards, alerts, connectors → no raw data dumps</span>
+                                    </li>
+                                    <li>
+                                        <strong>Automate compliance</strong><br/>
+                                        <span style="font-size: 1.1rem; color: #a0a0a0;">Example: Policy + consent enforcement built into workflow</span>
+                                    </li>
+                                </ol>
+                            </div>
+                            <div style="display: grid; grid-template-rows: auto auto auto; gap: 1rem;">
+                                <div class="card card-success fragment" style="padding: 1.5rem;">
+                                    <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem;">💡 Data as Integration</h3>
+                                    <p style="font-size: 1.1rem; line-height: 1.6;">Data is valuable only when embedded in usable services, not as raw exports.</p>
+                                </div>
+                                <div class="card card-success fragment" style="padding: 1.5rem;">
+                                    <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem;">💡 Protocol Fit</h3>
+                                    <p style="font-size: 1.1rem; line-height: 1.6;">Pick the right protocol for your business model—DataSpace, MCP, or APIs.</p>
+                                </div>
+                                <div class="card card-success fragment" style="padding: 1.5rem;">
+                                    <h3 style="font-size: 1.3rem; margin-bottom: 0.5rem;">💡 Compliance First</h3>
+                                    <p style="font-size: 1.1rem; line-height: 1.6;">Build privacy, consent, and regulation enforcement into your core workflow.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card card-success fragment" style="padding: 1.5rem; margin-bottom: 1.5rem;">
-                        <h3 style="font-size: 1.4rem; margin-bottom: 1rem;">💡 Key Insight</h3>
-                        <p style="font-size: 1.25rem; line-height: 1.8;"><strong>Clients buy outcomes, not data.</strong> Package insight and integration together—that's where value lives.</p>
-                    </div>
-                    <div style="width: 100%; display: flex; align-items: center; justify-content: center; margin-top: 1.5rem;" class="fragment">
-                        <img src="/Contact.Matthias.Buchhorn.png" alt="Contact Matthias Buchhorn" loading="lazy" style="width: 100%; height: auto; border-radius: 10px;" />
+                    <!-- Full-width image at bottom -->
+                    <div style="width: 100%; margin: 0; padding: 0; flex-shrink: 0; overflow: hidden;" class="fragment">
+                        <img src="/Contact.Matthias.Buchhorn.png" alt="Contact Matthias Buchhorn" loading="lazy" style="width: 100%; height: auto; display: block;" />
                     </div>
                 </div>
+            </section>
             </section>
         </div>
     </div>
